--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "legacy-checker",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Legacy-checker Private",
-  "main": "gulpfile.js",
+  "main": "dist/main.js",
+  "umd:main": "dist/main.umd.js",
+  "module": "dist/main.mjs",
+  "source": "src/main.js",
   "scripts": {
-    "build": "gulp"
+    "build": "gulp",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PepoBJ/Legacy-Checker.git"
   },
-  "author": "Robert HC",
+  "author": "Robert HC <bj112143@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/PepoBJ/Legacy-Checker/issues"
@@ -21,5 +25,6 @@
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser": "^2.1.0"
-  }
+  },
+  "files": ["dist", "package.json", "README.md"]
 }
