--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "source": "src/main.js",
   "scripts": {
     "build": "gulp",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "publish": "npm publish --access public"
   },
   "repository": {
     "type": "git",
