Feat: implement validators

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "legacy-checker",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Legacy-checker Private",
   "main": "dist/main.js",
   "umd:main": "dist/main.umd.js",
@@ -22,9 +22,13 @@
   "homepage": "https://github.com/PepoBJ/Legacy-Checker#readme",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "gulp-rename": "^2.0.0",
-    "gulp-sourcemaps": "^3.0.0",
     "gulp-terser": "^2.1.0"
   },
-  "files": ["dist", "package.json", "README.md"]
+  "files": [
+    "dist",
+    "package.json",
+    "README.md"
+  ]
 }
